# blogi

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  mise.toml
.github/workflows/: docker.yaml  rust-clippy.yml
.sqlx/: query-347c00e4cab2bddb3abe12078d1f00021536ee016507f1c7467a94e4e886663e.json  query-d11eb196e314e7bcd55417f27289b71ada6edc60011e6fe07199c5cffe8bca0c.json
crates/blogi/: Cargo.toml
crates/blogi/src/: main.rs
crates/libs/db/: Cargo.toml
crates/libs/db/src/: actor.rs  cache.rs  lib.rs  pagination.rs  pg.rs
crates/libs/errors/: Cargo.toml
crates/libs/errors/src/: lib.rs
crates/libs/lexicons/: Cargo.toml
crates/libs/lexicons/src/: client.rs  lib.rs  moe.rs  record.rs
crates/libs/lexicons/src/moe/: hayden.rs
crates/libs/lexicons/src/moe/hayden/: blogi.rs
crates/libs/lexicons/src/moe/hayden/blogi/: actor.rs  blog.rs
crates/libs/lexicons/src/moe/hayden/blogi/actor/: defs.rs  get_profile.rs  get_profiles.rs  profile.rs
crates/libs/lexicons/src/moe/hayden/blogi/blog/: comment.rs  defs.rs  entry.rs  get_entries_for_author.rs
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: lib.rs
crates/services/api/: Cargo.toml
crates/services/api/src/: lib.rs  state.rs
crates/services/api/src/handlers/: actor.rs  health.rs  mod.rs
crates/services/ingester/: Cargo.toml
crates/services/ingester/src/: lib.rs
lexicons/moe/hayden/blogi/actor/: defs.json  getProfile.json  getProfiles.json  profile.json
lexicons/moe/hayden/blogi/blog/: comment.json  defs.json  entry.json  getEntriesForAuthor.json
migrations/: 20250817135338_initial_schema.sql
