[package]
name = "blogi-db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
anyhow = { workspace = true }
blogi-errors = { path = "../errors" }
blogi-lexicons = { path = "../lexicons" }
sqlx = { workspace = true, features = ["chrono", "postgres", "runtime-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
atrium-api = { version = "0.25.5", default-features = false }
chrono = "0.4.41"
blogi-utils = { version = "0.1.0", path = "../utils" }
redis = { version = "0.32.5", features = ["tokio-comp", "tokio-rustls-comp"] }
