[package]
name = "blogi-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
atrium-api.workspace = true
blogi-errors = { version = "0.1.0", path = "../errors" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
