[package]
name = "blogi-api"
version = "0.1.0"
edition = "2024"

[dependencies]
blogi-lexicons = { path = "../../libs/lexicons" }
blogi-errors = { path = "../../libs/errors", features = ["axum"] }
blogi-db = { path = "../../libs/db" }
tracing = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
async-trait = { workspace = true }
tower-http = { version = "0.6.6", features = ["timeout", "trace", "tracing"] }
http = "1.3.1"
