[package]
name = "blogi-ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
blogi-db = { path = "../../libs/db" }
tracing = { workspace = true }
anyhow = { workspace = true }
rocketman = "0.2.3"
blogi-errors = { path = "../../libs/errors" }
blogi-lexicons = { path = "../../libs/lexicons" }
serde_json = "1.0.142"
tokio = { workspace = true, features = ["sync"] }
